# armamagna-rs

./: Cargo.toml  README.md
data/: eng.txt  it.txt
src/: armamagna.rs  combinations.rs  dictionarium.rs  main.rs  search.rs  signature.rs
